--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,30 @@ img {
 .highlight_e {
     background-color: yellow;
 }
+
+/* Button color */
+.highlight {
+    background-color:yellow;
+    border:2px solid red;
+    transition: background-color 0.5s ease;
+}
+
+#popup-window {
+    display: none;
+    position: fixed;
+    top: 20%;
+    left: 30%;
+    width: 40%;
+    background-color: white;
+    border: 2px solid black;
+    padding: 20px;
+    position: relative;
+}
+
+#close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    font-size: 24px;
+}
