--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,9 @@ nav ul {
 }
 
 nav ul li {
-    display: inline-block; /* Aligns navigation items horizontally */
+    display: inline-block;
     margin-right: 15px;
+    font-size: 1.5em;
 }
 
 /* Specific styling for the container with the profile picture */
@@ -118,8 +119,8 @@ img {
 
 /* Fixed dimensions for project images */
 .project-logo img {
-    width: 300px;
-    height: 160px;
+    width: 150px;
+    height: 80px;
     border: 2px solid black;
     border-radius: 4px;
 }
